# cuarma

./: CMakeLists.txt  LICENSE  README
cmake/: CUARMACommon.cmake  CUARMAConfig.cmake.in
cuarma/: compressed_compressed_matrix.hpp  compressed_matrix.hpp  context.hpp  coordinate_matrix.hpp  cuarma  ell_matrix.hpp  fft.hpp  forwards.h  hyb_matrix.hpp  matrix.hpp  matrix_proxy.hpp  range.hpp  scalar.hpp  slice.hpp  sliced_ell_matrix.hpp  vector.hpp  vector_proxy.hpp  version.hpp
cuarma/backend/: cpu_ram.hpp  cuda.hpp  mem_handle.hpp  memory.hpp  util.hpp
cuarma/blas/: bicgstab.hpp  bisect.hpp  bisect_gpu.hpp  cg.hpp  direct_solve.hpp  eig.hpp  fft_operations.hpp  gmres.hpp  ichol.hpp  ilu.hpp  ilu_operations.hpp  inner_prod.hpp  iterative_operations.hpp  jacobi_precond.hpp  lu.hpp  matrix_operations.hpp  maxmin.hpp  misc_operations.hpp  mixed_precision_cg.hpp  nmf.hpp  norm_1.hpp  norm_2.hpp  norm_frobenius.hpp  norm_inf.hpp  power_iter.hpp  prod.hpp  qr-method-common.hpp  qr-method.hpp  qr.hpp  row_scaling.hpp  scalar_operations.hpp  sparse_matrix_operations.hpp  sum.hpp  tql2.hpp  vector_operations.hpp
cuarma/detail/: matrix_def.hpp  vector_def.hpp
cuarma/device_specific/: forwards.h
cuarma/io/: matrix_market.hpp
cuarma/meta/: enable_if.hpp  predicate.hpp  result_of.hpp  tag_of.hpp  type_of.hpp
cuarma/misc/: bandwidth_reduction.hpp  cuthill_mckee.hpp  gibbs_poole_stockmeyer.hpp
cuarma/scheduler/: execute.hpp  execute_axbx.hpp  execute_elementwise.hpp  execute_generic_dispatcher.hpp  execute_matrix_dispatcher.hpp  execute_matrix_prod.hpp  execute_scalar_assign.hpp  execute_scalar_dispatcher.hpp  execute_util.hpp  execute_vector_dispatcher.hpp  forwards.h  io.hpp  preset.hpp
cuarma/tools/: adapter.hpp  entry_proxy.hpp  matrix_generation.hpp  matrix_size_deducer.hpp  random.hpp  sha1.hpp  shared_ptr.hpp  timer.hpp  tools.hpp
cuarma/traits/: clear.hpp  context.hpp  fill.hpp  handle.hpp  row_major.hpp  size.hpp  start.hpp  stride.hpp
examples/: CMakeLists.txt  bandwidth-reduction.cpp  bisect.cu  blas1.cu  blas2.cu  blas3.cu  blas3range.cu  custom-cuda.cu  dense_blas.cu  direct_solve.cu  fft.cu  head_define.h  iterative-custom.cu  iterative.cu  least-squares.cu  libcuarma.cu  matrix-free.cu  matrix-range.cu  nmf.cu  power-iter.cu  qr.cu  qr_method.cu  scheduler.cpp  solver.cu  sparse.cu  tql2.cu  vector-io.hpp  vector-range.cu  wrap-cuda-buffer.cu  wrap-host-buffer.cpp
libcuarma/: CMakeLists.txt
libcuarma/include/: cuarma.hpp
libcuarma/src/: backend.cu  blas1.cu  blas1_cuda.cu  blas1_host.cu  blas2.cu  blas2_cuda.cu  blas2_host.cu  blas3.cu  blas3.hpp  blas3_cuda.cu  blas3_host.cu  cuarma_private.hpp  init_matrix.hpp  (+1 more)
mex/: README  READMECN  cuarmaMex.hpp  nvmexxml.m
tests/: CMakeLists.txt
tests/src/: bisect.cu  blas3_solve.cu  external_1.cu  external_2.cu  fft_1d.cu  fft_2d.cu  global_variables.cu  head_data.h  head_define.h  iterators.cu  libcuarma_blas1.cu  libcuarma_blas2.cu  libcuarma_blas3.cu  matrix_col_double.cu  matrix_col_float.cu  matrix_col_int.cu  matrix_convert.cu  matrix_float_double.hpp  matrix_int.hpp  matrix_product_double.cu  matrix_product_float.cu  matrix_product_float_double.hpp  matrix_row_double.cu  matrix_row_float.cu  matrix_row_int.cu  matrix_vector.cu  matrix_vector_int.cu  nmf.cu  qr_method.cu  qr_method_func.cu  scalar.cu  scan.cu  scheduler_matrix.cpp  scheduler_matrix_matrix.cpp  scheduler_matrix_vector.cpp  scheduler_sparse.cpp  scheduler_vector.cpp  self_assign.cu  sparse.cu  sparse_prod.cu  (+7 more)
(+65 files in other folders)
